Fixed Education section alignment and text size.

--- a/myresume/src/components/Education/Education.css
+++ b/myresume/src/components/Education/Education.css
@@ -1,28 +1,45 @@
 .education-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
   background-color: #cee1ff;
   padding-bottom: 1em;
 }
 
-.education-card {
-  padding-top: 0.rem;
-  background-color: #fff;
+.education-title {
+  display: flex;
+  justify-content: center;
+}
 
+.education-title span{
+  font-size: 4rem;
+}
+
+.education-title span::first-letter {
+  font-size: 8rem;
+  font-style: italic;
+}
+
+.education-card {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 60%;
+
+  background-color: #fff;
+  padding-top: 1rem;
   border-radius: 0.1rem;
   border-width: 1px;
   box-shadow: 0px 0px 1px 1px #d1d1d1;
+  margin: 1%;
 }
 
-.education-card-divisor {
-  margin: 1em;
+.education-card strong {
+  font-size: 2rem;
 }
 
-.education-title {
-  font-size: 2rm;
-  display: inline-block;
-  vertical-align: bottom;
-}
-
-.education-title::first-letter {
-  font-size: 2.5rem;
-  font-style: italic;
+.education-card p {
+  font-size: 1.5rem;
 }
